# SHACL_validation

./: README.rst  pyproject.toml
data/: datetimestamp.ttl  dcat_ap_de-RefImp_TTL_ADVANCED.ttl  first_1000.ttl  planned-availability
fallout/: data_problems.md
sandbox/: error.py  error2.py
shacl/: constants.py  main.py  namespaces.py  preprocess.py  report.py  result_graph.html  results.py  shacl_db.py  table.html  table_datenadler.html  table_potsdam.html  validate.py
shacl/log/: log.py
shacl/ustils/: errors.py  helper.py  timeit.py
shapes/: dcat-ap-de-imports.ttl  dcat-ap_2.1.1_shacl_shapes.ttl  owl_import.ttl
tests/: test_shacl.py
